# identFS

./: .gitignore  CMakeLists.txt  README.md  addfiles.cpp  addfiles.h  addfiles.ui  addfilestoproject.cpp  addfilestoproject.h  addfilestoproject.ui  identfs.db  identfs.sqbpro  introdialog.cpp  introdialog.h  introdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings.cpp  settings.h  settings.ui  tools.cpp  tools.h
translations/: de.ts  en.ts
